Fix jumping mini-avatart on toggling profile

--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -347,6 +347,7 @@ Icon classes can be used entirely standalone. They are named after their origina
 				border-bottom: 1px solid #fff;
 				border-left: 1px solid #e9e9e9;
 				border-right: 1px solid #e9e9e9;
+				margin-right: -1px;
 
 				&:after {
 					content: '\25B2';
