--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -123,6 +123,7 @@
 				border-bottom: 1px solid #fff;
 				border-left: 1px solid #e9e9e9;
 				border-right: 1px solid #e9e9e9;
+				margin-right: -1px;
 
 				&:after {
 					content: '\25B2';
